@startuml

' --------------- BACKEND --------------- '

'CandyGame'

class CandyGame{

}

GameListener <-- CandyGame


' Grid'

abstract class Grid{
 - g: Cell[][]
 - gMap: Map<Cell, Point>
 - state: GameState
 - listeners: List<GameListener>
 - moveMaker: MoveMaker
 - figureDetector: FigureDetector
 - generatorCell: GeneratorCell

 # fillCells(): void
 - fallElements(): bool

 + tryRemove(Cell): Figure
 - removeFigure(int, int, Figure): void

 + get(int,int): Element
 + getCell(int,int): Cell
 + clearContent(int,int): void
 + setContent(int,int): void

 + addListener(GameListener): void
 + wasUpdated(): void
 + cellExplosion(Element): void
}

Grid *-- Cell
Grid *-- GameState
Grid *-- GameListener
Grid *-- MoveMaker
Grid *-- FigureDetector
Grid *-- GeneratorCell


' GameState '

abstract class GameState{
 - score: long
 - moves: int
 + addScore(int): void
 + getScore(): int
 + addMove(): void
 + getMoves(): int

 + {abstract} gameOver(): bool
 + {abstract} playerWon(): bool
}

Grid *-- GameState


' GameListener '

interface GameListener{
 + gridUpdated(): void
 + cellExplosion(): void
}


' --------------- CELL --------------- '

' Cell '

class Cell{
 - around: Cell[]
 - content: Element
 + isMovable(): bool
 + isEmpty(): bool
 + hasFloor(): bool

 + setContent(Element): void
 + clearContent(): void
 + getContent(): Element
 + getAndClearContent(): Element
 + fallUpperContent(): bool
 - explode(Direction): void
 - expandExplosion(Direction[]): void
}

Cell *-- Element


' GeneratorCell '

abstract class GeneratorCell {
  + equals(): bool
  + isEmpty(): bool
  + isMovable(): bool

  + {abstract} getContent(): Element
  + getAndClearContent(): Element
  + setContent(): void
  + fallUpperContent(): bool
}

Cell <-- GeneratorCell


' CandyGeneratorCell '

class CandyGeneratorCell {
  + getContent(): Element
}

GeneratorCell <-- CandyGeneratorCell


' BombCandyGeneratorCell '

class BombCandyGeneratorCell {
 + bombFrequency: double
 + bombInitialMoves: int
 + bombsToPlace: int
 + getContent(): Element
}

GeneratorCell <-- BombCandyGeneratorCell



' --------------- ELEMENT --------------- '

' Element '

abstract class Element{
 + {abstract} isMovable(): bool
 + {abstract} getKey(): String
 + {abstract} getScore(): int
 + {abstract} explode(): Direction[]
 + isSolid(): bool
}


' Bomb '

class Bomb{
 + isMovable(): bool
 + getKey(): String
 + getScore(): int
}

Element <-- Bomb


' Wall '

class Wall{
 + isMovable(): bool
 + getKey(): String
}

Element <-- Wall


' Nothing '

class Nothing{
 + isSolid(): bool
 + isMovable(): bool
 + getKey(): String
}

Element <-- Nothing


' Candy '

class Candy{
 - candyColor: CandyColor
 + getColor(): CandyColor
 + setColor(CandyColor): void
 + isMovable(): bool
 + equals(): bool
 + getKey(): String
 + getScore(): long
}

Element <-- Candy
Candy *-- CandyColor


' CandyColor '

enum CandyColor{
 RED, GREEN, BLUE, YELLOW, ORANGE, PURPLE
}


' BombCandy '

class BombCandy{
 - remainingMoves: int
 + getRemainingMoves(): int
 + decreaseRemainingMoves(): void
}

Candy <-- BombCandy


' HorizontalStripedCandy '

class HorizontalStripedCandy{
 - explosion: Direction[]
 + explode(): Direction[]
 + getKey(): String
 + getScore(): long
}

Candy <-- HorizontalStripedCandy


' VerticalStripedCandy '

class VerticalStripedCandy{
 - explosion: Direction[]
 + explode(): Direction[]
 + getKey(): String
 + getScore(): long
}

Candy <-- VerticalStripedCandy


' WrappedCandy '

class WrappedCandy{
 - explosion: Direction[]
 + explode(): Direction[]
 + getKey(): String
 + getScore(): long
}

Candy <-- WrappedCandy



' --------------- MOVES --------------- '

' MoveMaker '

class MoveMaker{
 - map: Map<String, Move>
 - grid: Grid
 - initMap(): void
 + getMove(i1,j1,i2,j2): Move
}

MoveMaker *-- Move

' IRR ' MoveMaker *-- Grid


' Move '

class Move{
 - grid: Grid
 # i1, j1, i2, j2: int
 + setCoords(int,int,int,int): void
 + isValid(): bool
}

' IRR ' Move *-- Grid


' --------------- LEVELS --------------- '

' Level1 '

class Level1{
 - MAX_MOVES: int
 # fillCells(): void
 + tryMove(): bool
 - setGoldenCross(): void
}

Grid <-- Level1
Level1 *-- Level1State


' Level1State '

class Level1State{
 - long maxMoves
 - long goldenCells
 + gameOver(): bool
 + playerWon(): bool
 + toString(): String
 - addGoldenCells(): void
}

GameState <-- Level1State


' Level3 '

class Level3 {
  - BOMB_FREQUENCY : double
  - BOMB_INITIAL_MOVES : int
  - NUMBER_OF_BOMBS : int
  + tryMove(): bool
  # fillCells(): void
  - updateBombCandies(): void
}

Grid <-- Level3
Level3 *-- Level3State


' Level3State'

class Level3State {
  - bombExploded : boolean
  - bombsOnGrid : int
  - bombsToPlace : long
  - remainingMovements : int
  + gameOver(): bool
  + playerWon(): bool
  + setBombsOnGrid(int): void
  + toString(): String
  - bombExploded(): void
  - bombPlaced(): void
  - setRemainingMovements(int): void
}

GameState <-- Level3State

@enduml